# shimmer

./: Cargo.toml
examples/: hello_triangle.rs  invalid.rs  render_image.rs
src/: error.rs  lib.rs  prelude.rs  utils.rs
