[package]
name = "shimmer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.8"
posh = { git = "https://github.com/wyvernbw/posh" }
glow = "0.13.1"
raw-window-handle = "0.5.2"
winit = "0.29.10"
tracing = "0.1.40"
glutin = "0.31.2"
glutin-winit = "0.4.2"

[dev-dependencies]
tracing-subscriber = "0.3.18"
